syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/walletnode/register_sense";

package register_sense;

service RegisterSense {
    // Session informs the supernode its position (primary/secondary).
    // Returns `SessID` that are used by all other rpc methods to identify the task on the supernode. By sending `sessID` in the Metadata.
    // The stream is used by the parties to inform each other about the cancellation of the task.
    rpc Session(stream SessionRequest) returns (stream SessionReply);

    // AcceptedNodes returns peers of the secondary supernodes connected to it.
    rpc AcceptedNodes(AcceptedNodesRequest) returns (AcceptedNodesReply);

    // ConnectTo requests to connect to the primary supernode.
    rpc ConnectTo(ConnectToRequest) returns (ConnectToReply);

    // MeshNodes informs to SNs other SNs on same meshNodes created for this registration request
    rpc MeshNodes(MeshNodesRequest) returns (MeshNodesReply);

    // SendRegMetadata informs to SNs metadata required for registration request like current block hash, creator,..
    rpc SendRegMetadata(SendRegMetadataRequest) returns (SendRegMetadataReply);

    // ProbeImage uploads the resampled image compute and return a fingerpirnt.
    rpc ProbeImage(stream ProbeImageRequest) returns (ProbeImageReply);

    // SendArtTicket sends a signed art-ticket to the supernode.
    rpc SendSignedNFTTicket(SendSignedNFTTicketRequest) returns (SendSignedNFTTicketReply);

    // SendPreBurntFeeTxid sends tx_id of 10% burnt transaction fee to the supernode.
    rpc SendPreBurntFeeTxid(SendPreBurntFeeTxidRequest) returns (SendPreBurntFeeTxidReply);

    // SendTicket sends a ticket to the supernode.
    rpc SendTicket(SendTicketRequest) returns (SendTicketReply);
}

message SessionRequest {
    bool is_primary = 1;
}
message SessionReply {
    string sessID = 1;
}

message AcceptedNodesRequest {
}
message AcceptedNodesReply {
    message Peer {
        string nodeID = 1;
    }
    repeated Peer peers = 1;
}

message ConnectToRequest {
    string sessID = 1;
    string nodeID = 2;
}
message ConnectToReply {
}

message MeshNodesRequest {
    message Node  {
     string sessID = 1;
     string nodeID = 2;
    }

    repeated Node nodes = 1;
}
message MeshNodesReply {
}

message SendRegMetadataRequest {
    string creatorPastelID = 1;
    string blockHash = 2;
}
message SendRegMetadataReply {

}

message ProbeImageRequest {
    bytes payload = 1;
}
message ProbeImageReply {
    bytes compressedSignedDDAndFingerprints = 1;
}


message SendSignedNFTTicketRequest {
    bytes nft_ticket = 1;
    bytes creator_signature = 2;
    bytes dd_fp_files = 3;

}

message SendSignedNFTTicketReply {
    int64 registration_fee = 1;
}

message SendPreBurntFeeTxidRequest {
    string txid = 1;
}
message SendPreBurntFeeTxidReply {
    string NFT_reg_txid = 1;
}

message SendTicketRequest {
    bytes ticket = 1;
    string ticket_signature = 2;
    string fgpt= 3;
    string fgpt_signature = 4;
    string fee_txid = 5;
    bytes thumbnail = 6;
}
message SendTicketReply {
    string ticket_txid = 1;
}

